# Naive-SPL-Compiler

./: .gitignore  AST.cpp  AST.h  ASTNode.h  CMakeLists.txt  ConstTable.h  NodePrecedence.h  NodePredeclaration.h  README.md  SystemFunctions.cpp  codegen.cpp  codegen.h  lex.yy.c  lexer.cpp  lexer.l  main.cpp  node.h  parser.cpp  parser.hpp  parser.y  system.spl  test.s
test/: demo.spl  system.spl
